<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!--App name-->
  <string name="app_name">Candis Client</string>
    
  <!--Main Activity-->
  <string name="candis_version">Candis Client V 0.1</string>
  <string name="start_button">Start</string>
  <string name="service_text_stopped">Service stopped</string>
  <string name="service_text_started">Service Running</string>
  <string name="service_button_start">Start Service</string>
  <string name="service_button_stop">Stop Service</string>
  <string name="info_button">Info</string>
  <string name="settings_button">Settings</string>
  <string name="log_button">Log</string>

  <string name="error_name_missing">Click!</string>
  <string name="error_ok">OK</string>
    
  <string name="start_msg">Starting service</string>
  <string name="stop_msg">Stopping service</string>

  <string name="accept">Accept</string>
  <string name="reject">Reject</string>

  <!--Info Activity-->
  <string name="infohead_id_text">ID (SHA-1)</string>
  <string name="infohead_server_text">Connected to server</string>
  <string name="infohead_profile_text">Profile data (Sent to Master)</string>

  <!--Log Activity-->
  <string name="clear_log_button">Clear Log</string>

  <!--Options-->
  <string name="pref_category_server">Server</string>
  <string name="pref_category_other">Preferences</string>
  <!--Host-->
  <string name="pref_host_title">Host</string>
  <string name="pref_host_summary">Hostname</string>
  <!--Port-->
  <string name="pref_port_title">Port</string>
  <string name="pref_port_summary">Portname</string>
  <!--Powermode-->
  <string name="pref_powermode_title">Powermode</string>
  <string name="pref_powermode_dtitle">Calculates If</string>
  <string name="pref_powermode_default">battery_not_low</string>
  <string-array name="pref_powermode_entries">
    <item>Always</item>
    <item>Battery not low</item>
    <item>Power connected</item>
  </string-array>
  <string-array name="pref_powermode_values">
    <item>always_on</item>
    <item>battery_not_low</item>
    <item>power_connected</item>
  </string-array>
  <!--Menus-->
  <string name="menu_settings">Settings</string>
  <string name="menu_info">Info</string>

  <string name="activity_settings_name">SettingsActivity</string>
  
  <!-- Service -->
  <string name="remote_service_started">Started</string>
  <string name="remote_service_stopped">Stopped</string>
  <string name="remote_service_connected">Remote Service connected</string>
  <string name="remote_service_disconnected">Remote Service disconnected</string>

  <!-- Errors and Feedbacks -->
  <!-- Status Messages for connection to Master  -->
  <string name="status_disconnected">Disconnected</string>
  <string name="status_connecting">Connecting...</string>
  <string name="status_connected">Connected.</string>
  <string name="status_connection_failed">Connection failed</string>

</resources>