<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
  <!--  Client -->
  <TextView  
    android:id="@+id/infohead_server_id"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="10dp"
    android:text="@string/infohead_server_text"/>
  <TextView  
    android:id="@+id/info_server_id"
    style="@android:style/TextAppearance.Small"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/infohead_server_id"
    android:singleLine="false"
    android:padding="5dp"
    android:text="unknown"/>
  <!--  ID (SHA-1) -->
  <TextView  
    android:id="@+id/infohead_id_id"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_server_id"
    android:layout_marginTop="10dp"
    android:text="@string/infohead_id_text"/>
  <TextView  
    android:id="@+id/info_id_id"
    style="@android:style/TextAppearance.Small"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/infohead_id_id"
    android:singleLine="false"
    android:padding="5dp"
    android:text="unknown"/>
  <!--  Profile -->
  <TextView
    android:id="@+id/infohead_profile_id"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_id_id"
    android:layout_marginTop="10dp"
    android:text="@string/infohead_profile_text"/>
  <!--  Profile:Model -->
  <TextView
    android:id="@+id/info_profile_model"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/infohead_profile_id"
    android:layout_alignParentLeft="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="Device Name"/>
  <TextView
    android:id="@+id/info_profile_model_value"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/infohead_profile_id"
    android:layout_alignParentRight="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="Android"/>
  <!--  Profile:Device ID -->
  <TextView
    android:id="@+id/info_profile_deviceid"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_model"
    android:layout_alignParentLeft="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="Device ID"/>
  <TextView
    android:id="@+id/info_profile_deviceid_value"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_model"
    android:layout_alignParentRight="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="0190 363636"/>
  <!--Profile:CPUs-->
  <TextView
    android:id="@+id/info_profile_cpus"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_deviceid"
    android:layout_alignParentLeft="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="CPUs"/>
  <TextView
    android:id="@+id/info_profile_cpus_value"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_deviceid"
    android:layout_alignParentRight="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="2"/>
  <!--Profile:Memory-->
  <TextView
    android:id="@+id/info_profile_memory"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_cpus"
    android:layout_alignParentLeft="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="Memory"/>
  <TextView
    android:id="@+id/info_profile_memory_value"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_cpus"
    android:layout_alignParentRight="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="0 MB"/>
  <!--Profile:Benchmark-->
  <TextView
    android:id="@+id/info_profile_benchmark"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_memory"
    android:layout_alignParentLeft="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="Benchmark"/>
  <TextView
    android:id="@+id/info_profile_benchmark_value"
    style="@android:style/TextAppearance.Small"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/info_profile_memory"
    android:layout_alignParentRight="true"
    android:singleLine="false"
    android:padding="5dp"
    android:text="4711"/>
</RelativeLayout>